--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "mysql2": "^1.6.4",
+    "node-sass": "^4.11.0",
     "sequelize": "^4.41.2"
   }
 }
